[gd_scene load_steps=5 format=3 uid="uid://bf5op308akq6t"]

[ext_resource type="Script" path="res://Scenes/Menu/Menu.gd" id="1_vfrg0"]
[ext_resource type="PackedScene" uid="uid://digmq4nss2cwh" path="res://Backgrounds/Water.tscn" id="2_oxh82"]
[ext_resource type="FontFile" uid="uid://d3r1wnihdieqm" path="res://Fonts/I-pixel-u.ttf" id="3_1letj"]
[ext_resource type="Texture2D" uid="uid://4pv6k0egtvub" path="res://Sprites/Title.png" id="3_7m6fh"]

[node name="Menu" type="Control" node_paths=PackedStringArray("title")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfrg0")
title = NodePath("MarginContainer/VBoxContainer/MarginContainer/Title")

[node name="Water" parent="." instance=ExtResource("2_oxh82")]
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_7m6fh")
expand_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 96
theme_override_constants/margin_right = 96

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Battle" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_1letj")
theme_override_font_sizes/font_size = 36
text = "Battle"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="ControlPanel" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_1letj")
theme_override_font_sizes/font_size = 20
text = "Control Panel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/ControlPanel" to="." method="_on_control_panel_pressed"]
